--- a/your-code/main.ipynb
+++ b/your-code/main.ipynb
@@ -24,11 +24,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "630d7e4d",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "import math"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -41,10 +43,45 @@
    ]
   },
   {
-   "cell_type": "markdown",
+   "cell_type": "code",
+   "execution_count": 5,
    "id": "1207cb2c",
    "metadata": {},
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{0,\n",
+       " 1,\n",
+       " 4,\n",
+       " 9,\n",
+       " 16,\n",
+       " 25,\n",
+       " 36,\n",
+       " 49,\n",
+       " 64,\n",
+       " 81,\n",
+       " 100,\n",
+       " 121,\n",
+       " 144,\n",
+       " 169,\n",
+       " 196,\n",
+       " 225,\n",
+       " 256,\n",
+       " 289,\n",
+       " 324,\n",
+       " 361}"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "square = {i**2 for i in range(20)}\n",
+    "square"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -59,11 +96,125 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "id": "c047115a",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{0.0,\n",
+       " 1.0,\n",
+       " 1.4142135623730951,\n",
+       " 1.7320508075688772,\n",
+       " 2.0,\n",
+       " 2.23606797749979,\n",
+       " 2.449489742783178,\n",
+       " 2.6457513110645907,\n",
+       " 2.8284271247461903,\n",
+       " 3.0,\n",
+       " 3.1622776601683795,\n",
+       " 3.3166247903554,\n",
+       " 3.4641016151377544,\n",
+       " 3.605551275463989,\n",
+       " 3.7416573867739413,\n",
+       " 3.872983346207417,\n",
+       " 4.0,\n",
+       " 4.123105625617661,\n",
+       " 4.242640687119285,\n",
+       " 4.358898943540674,\n",
+       " 4.47213595499958,\n",
+       " 4.58257569495584,\n",
+       " 4.69041575982343,\n",
+       " 4.795831523312719,\n",
+       " 4.898979485566356,\n",
+       " 5.0,\n",
+       " 5.0990195135927845,\n",
+       " 5.196152422706632,\n",
+       " 5.291502622129181,\n",
+       " 5.385164807134504,\n",
+       " 5.477225575051661,\n",
+       " 5.5677643628300215,\n",
+       " 5.656854249492381,\n",
+       " 5.744562646538029,\n",
+       " 5.830951894845301,\n",
+       " 5.916079783099616,\n",
+       " 6.0,\n",
+       " 6.082762530298219,\n",
+       " 6.164414002968976,\n",
+       " 6.244997998398398,\n",
+       " 6.324555320336759,\n",
+       " 6.4031242374328485,\n",
+       " 6.48074069840786,\n",
+       " 6.557438524302,\n",
+       " 6.6332495807108,\n",
+       " 6.708203932499369,\n",
+       " 6.782329983125268,\n",
+       " 6.855654600401044,\n",
+       " 6.928203230275509,\n",
+       " 7.0,\n",
+       " 7.0710678118654755,\n",
+       " 7.14142842854285,\n",
+       " 7.211102550927978,\n",
+       " 7.280109889280518,\n",
+       " 7.3484692283495345,\n",
+       " 7.416198487095663,\n",
+       " 7.483314773547883,\n",
+       " 7.54983443527075,\n",
+       " 7.615773105863909,\n",
+       " 7.681145747868608,\n",
+       " 7.745966692414834,\n",
+       " 7.810249675906654,\n",
+       " 7.874007874011811,\n",
+       " 7.937253933193772,\n",
+       " 8.0,\n",
+       " 8.06225774829855,\n",
+       " 8.12403840463596,\n",
+       " 8.18535277187245,\n",
+       " 8.246211251235321,\n",
+       " 8.306623862918075,\n",
+       " 8.366600265340756,\n",
+       " 8.426149773176359,\n",
+       " 8.48528137423857,\n",
+       " 8.54400374531753,\n",
+       " 8.602325267042627,\n",
+       " 8.660254037844387,\n",
+       " 8.717797887081348,\n",
+       " 8.774964387392123,\n",
+       " 8.831760866327848,\n",
+       " 8.888194417315589,\n",
+       " 8.94427190999916,\n",
+       " 9.0,\n",
+       " 9.055385138137417,\n",
+       " 9.1104335791443,\n",
+       " 9.16515138991168,\n",
+       " 9.219544457292887,\n",
+       " 9.273618495495704,\n",
+       " 9.327379053088816,\n",
+       " 9.38083151964686,\n",
+       " 9.433981132056603,\n",
+       " 9.486832980505138,\n",
+       " 9.539392014169456,\n",
+       " 9.591663046625438,\n",
+       " 9.643650760992955,\n",
+       " 9.695359714832659,\n",
+       " 9.746794344808963,\n",
+       " 9.797958971132712,\n",
+       " 9.848857801796104,\n",
+       " 9.899494936611665,\n",
+       " 9.9498743710662,\n",
+       " 10.0}"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "sqrt = {math.sqrt(i) for i in range(101)}\n",
+    "sqrt"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -77,11 +228,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "id": "e23d87ea",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[0, -1, -2, -3, -4, -5, -6, -7, -8, -9, -10]"
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "my_list = [i*(-1) for i in range(11)]\n",
+    "my_list"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -95,11 +260,74 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "id": "d8d1c865",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[1,\n",
+       " 3,\n",
+       " 5,\n",
+       " 7,\n",
+       " 9,\n",
+       " 11,\n",
+       " 13,\n",
+       " 15,\n",
+       " 17,\n",
+       " 19,\n",
+       " 21,\n",
+       " 23,\n",
+       " 25,\n",
+       " 27,\n",
+       " 29,\n",
+       " 31,\n",
+       " 33,\n",
+       " 35,\n",
+       " 37,\n",
+       " 39,\n",
+       " 41,\n",
+       " 43,\n",
+       " 45,\n",
+       " 47,\n",
+       " 49,\n",
+       " 51,\n",
+       " 53,\n",
+       " 55,\n",
+       " 57,\n",
+       " 59,\n",
+       " 61,\n",
+       " 63,\n",
+       " 65,\n",
+       " 67,\n",
+       " 69,\n",
+       " 71,\n",
+       " 73,\n",
+       " 75,\n",
+       " 77,\n",
+       " 79,\n",
+       " 81,\n",
+       " 83,\n",
+       " 85,\n",
+       " 87,\n",
+       " 89,\n",
+       " 91,\n",
+       " 93,\n",
+       " 95,\n",
+       " 97,\n",
+       " 99]"
+      ]
+     },
+     "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "odd = [i for i in range(101) if i%2==1]\n",
+    "odd"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -112,11 +340,167 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 20,
    "id": "6a9cfb8c",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[0,\n",
+       " 7,\n",
+       " 14,\n",
+       " 21,\n",
+       " 28,\n",
+       " 35,\n",
+       " 42,\n",
+       " 49,\n",
+       " 56,\n",
+       " 63,\n",
+       " 70,\n",
+       " 77,\n",
+       " 84,\n",
+       " 91,\n",
+       " 98,\n",
+       " 105,\n",
+       " 112,\n",
+       " 119,\n",
+       " 126,\n",
+       " 133,\n",
+       " 140,\n",
+       " 147,\n",
+       " 154,\n",
+       " 161,\n",
+       " 168,\n",
+       " 175,\n",
+       " 182,\n",
+       " 189,\n",
+       " 196,\n",
+       " 203,\n",
+       " 210,\n",
+       " 217,\n",
+       " 224,\n",
+       " 231,\n",
+       " 238,\n",
+       " 245,\n",
+       " 252,\n",
+       " 259,\n",
+       " 266,\n",
+       " 273,\n",
+       " 280,\n",
+       " 287,\n",
+       " 294,\n",
+       " 301,\n",
+       " 308,\n",
+       " 315,\n",
+       " 322,\n",
+       " 329,\n",
+       " 336,\n",
+       " 343,\n",
+       " 350,\n",
+       " 357,\n",
+       " 364,\n",
+       " 371,\n",
+       " 378,\n",
+       " 385,\n",
+       " 392,\n",
+       " 399,\n",
+       " 406,\n",
+       " 413,\n",
+       " 420,\n",
+       " 427,\n",
+       " 434,\n",
+       " 441,\n",
+       " 448,\n",
+       " 455,\n",
+       " 462,\n",
+       " 469,\n",
+       " 476,\n",
+       " 483,\n",
+       " 490,\n",
+       " 497,\n",
+       " 504,\n",
+       " 511,\n",
+       " 518,\n",
+       " 525,\n",
+       " 532,\n",
+       " 539,\n",
+       " 546,\n",
+       " 553,\n",
+       " 560,\n",
+       " 567,\n",
+       " 574,\n",
+       " 581,\n",
+       " 588,\n",
+       " 595,\n",
+       " 602,\n",
+       " 609,\n",
+       " 616,\n",
+       " 623,\n",
+       " 630,\n",
+       " 637,\n",
+       " 644,\n",
+       " 651,\n",
+       " 658,\n",
+       " 665,\n",
+       " 672,\n",
+       " 679,\n",
+       " 686,\n",
+       " 693,\n",
+       " 700,\n",
+       " 707,\n",
+       " 714,\n",
+       " 721,\n",
+       " 728,\n",
+       " 735,\n",
+       " 742,\n",
+       " 749,\n",
+       " 756,\n",
+       " 763,\n",
+       " 770,\n",
+       " 777,\n",
+       " 784,\n",
+       " 791,\n",
+       " 798,\n",
+       " 805,\n",
+       " 812,\n",
+       " 819,\n",
+       " 826,\n",
+       " 833,\n",
+       " 840,\n",
+       " 847,\n",
+       " 854,\n",
+       " 861,\n",
+       " 868,\n",
+       " 875,\n",
+       " 882,\n",
+       " 889,\n",
+       " 896,\n",
+       " 903,\n",
+       " 910,\n",
+       " 917,\n",
+       " 924,\n",
+       " 931,\n",
+       " 938,\n",
+       " 945,\n",
+       " 952,\n",
+       " 959,\n",
+       " 966,\n",
+       " 973,\n",
+       " 980,\n",
+       " 987,\n",
+       " 994]"
+      ]
+     },
+     "execution_count": 20,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "divisible_by_seven = [i for i in range(1001) if i%7==0]\n",
+    "divisible_by_seven"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -622,7 +1006,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -636,7 +1020,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.13"
+   "version": "3.11.2"
   },
   "toc": {
    "base_numbering": 1,
@@ -650,6 +1034,11 @@
    "toc_position": {},
    "toc_section_display": true,
    "toc_window_display": false
+  },
+  "vscode": {
+   "interpreter": {
+    "hash": "554195728242e646eae8050ec791cea05fe3cb4fbf2989d9fb779052e8516732"
+   }
   }
  },
  "nbformat": 4,
