--- a/your-code/main.ipynb
+++ b/your-code/main.ipynb
@@ -24,11 +24,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "630d7e4d",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "import math"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -47,6 +49,25 @@
    "source": []
   },
   {
+   "cell_type": "code",
+   "execution_count": 1,
+   "id": "e32c4c00",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1, 4, 9, 16, 25, 36, 49, 64, 81, 100, 121, 144, 169, 196, 225, 256, 289, 324, 361, 400]\n"
+     ]
+    }
+   ],
+   "source": [
+    "square = [i**2 for i in range(1,21)]\n",
+    "print(square)"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "id": "b421e0cb",
    "metadata": {},
@@ -59,11 +80,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "c047115a",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1, 4, 9, 16, 25, 36, 49, 64, 81, 100, 121, 144, 169, 196, 225, 256, 289, 324, 361, 400, 441, 484, 529, 576, 625, 676, 729, 784, 841, 900, 961, 1024, 1089, 1156, 1225, 1296, 1369, 1444, 1521, 1600, 1681, 1764, 1849, 1936, 2025, 2116, 2209, 2304, 2401, 2500, 2601, 2704, 2809, 2916, 3025, 3136, 3249, 3364, 3481, 3600, 3721, 3844, 3969, 4096, 4225, 4356, 4489, 4624, 4761, 4900, 5041, 5184, 5329, 5476, 5625, 5776, 5929, 6084, 6241, 6400, 6561, 6724, 6889, 7056, 7225, 7396, 7569, 7744, 7921, 8100, 8281, 8464, 8649, 8836, 9025, 9216, 9409, 9604, 9801, 10000]\n"
+     ]
+    }
+   ],
+   "source": [
+    "sqrt = [i**2 for i in range (1,101)]\n",
+    "print(sqrt)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -77,11 +109,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "id": "e23d87ea",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[-1, -2, -3, -4, -5, -6, -7, -8, -9, -10]\n"
+     ]
+    }
+   ],
+   "source": [
+    "my_list = [-x for x in range(1,11)]\n",
+    "print(my_list)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -95,11 +138,77 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "d8d1c865",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[1,\n",
+       " 3,\n",
+       " 5,\n",
+       " 7,\n",
+       " 9,\n",
+       " 11,\n",
+       " 13,\n",
+       " 15,\n",
+       " 17,\n",
+       " 19,\n",
+       " 21,\n",
+       " 23,\n",
+       " 25,\n",
+       " 27,\n",
+       " 29,\n",
+       " 31,\n",
+       " 33,\n",
+       " 35,\n",
+       " 37,\n",
+       " 39,\n",
+       " 41,\n",
+       " 43,\n",
+       " 45,\n",
+       " 47,\n",
+       " 49,\n",
+       " 51,\n",
+       " 53,\n",
+       " 55,\n",
+       " 57,\n",
+       " 59,\n",
+       " 61,\n",
+       " 63,\n",
+       " 65,\n",
+       " 67,\n",
+       " 69,\n",
+       " 71,\n",
+       " 73,\n",
+       " 75,\n",
+       " 77,\n",
+       " 79,\n",
+       " 81,\n",
+       " 83,\n",
+       " 85,\n",
+       " 87,\n",
+       " 89,\n",
+       " 91,\n",
+       " 93,\n",
+       " 95,\n",
+       " 97,\n",
+       " 99]"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "odds = []\n",
+    "for i in range (1,101):\n",
+    "    if i % 2 != 0:\n",
+    "        odds.append(i)\n",
+    "odds"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -112,18 +221,174 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "id": "6a9cfb8c",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[7,\n",
+       " 14,\n",
+       " 21,\n",
+       " 28,\n",
+       " 35,\n",
+       " 42,\n",
+       " 49,\n",
+       " 56,\n",
+       " 63,\n",
+       " 70,\n",
+       " 77,\n",
+       " 84,\n",
+       " 91,\n",
+       " 98,\n",
+       " 105,\n",
+       " 112,\n",
+       " 119,\n",
+       " 126,\n",
+       " 133,\n",
+       " 140,\n",
+       " 147,\n",
+       " 154,\n",
+       " 161,\n",
+       " 168,\n",
+       " 175,\n",
+       " 182,\n",
+       " 189,\n",
+       " 196,\n",
+       " 203,\n",
+       " 210,\n",
+       " 217,\n",
+       " 224,\n",
+       " 231,\n",
+       " 238,\n",
+       " 245,\n",
+       " 252,\n",
+       " 259,\n",
+       " 266,\n",
+       " 273,\n",
+       " 280,\n",
+       " 287,\n",
+       " 294,\n",
+       " 301,\n",
+       " 308,\n",
+       " 315,\n",
+       " 322,\n",
+       " 329,\n",
+       " 336,\n",
+       " 343,\n",
+       " 350,\n",
+       " 357,\n",
+       " 364,\n",
+       " 371,\n",
+       " 378,\n",
+       " 385,\n",
+       " 392,\n",
+       " 399,\n",
+       " 406,\n",
+       " 413,\n",
+       " 420,\n",
+       " 427,\n",
+       " 434,\n",
+       " 441,\n",
+       " 448,\n",
+       " 455,\n",
+       " 462,\n",
+       " 469,\n",
+       " 476,\n",
+       " 483,\n",
+       " 490,\n",
+       " 497,\n",
+       " 504,\n",
+       " 511,\n",
+       " 518,\n",
+       " 525,\n",
+       " 532,\n",
+       " 539,\n",
+       " 546,\n",
+       " 553,\n",
+       " 560,\n",
+       " 567,\n",
+       " 574,\n",
+       " 581,\n",
+       " 588,\n",
+       " 595,\n",
+       " 602,\n",
+       " 609,\n",
+       " 616,\n",
+       " 623,\n",
+       " 630,\n",
+       " 637,\n",
+       " 644,\n",
+       " 651,\n",
+       " 658,\n",
+       " 665,\n",
+       " 672,\n",
+       " 679,\n",
+       " 686,\n",
+       " 693,\n",
+       " 700,\n",
+       " 707,\n",
+       " 714,\n",
+       " 721,\n",
+       " 728,\n",
+       " 735,\n",
+       " 742,\n",
+       " 749,\n",
+       " 756,\n",
+       " 763,\n",
+       " 770,\n",
+       " 777,\n",
+       " 784,\n",
+       " 791,\n",
+       " 798,\n",
+       " 805,\n",
+       " 812,\n",
+       " 819,\n",
+       " 826,\n",
+       " 833,\n",
+       " 840,\n",
+       " 847,\n",
+       " 854,\n",
+       " 861,\n",
+       " 868,\n",
+       " 875,\n",
+       " 882,\n",
+       " 889,\n",
+       " 896,\n",
+       " 903,\n",
+       " 910,\n",
+       " 917,\n",
+       " 924,\n",
+       " 931,\n",
+       " 938,\n",
+       " 945,\n",
+       " 952,\n",
+       " 959,\n",
+       " 966,\n",
+       " 973,\n",
+       " 980,\n",
+       " 987,\n",
+       " 994]"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "divisible_by_seven = [i for i in range (1,1001) if i%7==0]\n",
+    "divisible_by_seven"
+   ]
   },
   {
    "cell_type": "markdown",
    "id": "6e6f21e0",
    "metadata": {},
    "source": [
-    "# Remove all of the vowels in a string. Hint: make a list of the non-vowels. Use non_vowels as the name of the list.\n",
+    "# Remove all of the vowels in a string. Hint: make a list of the non-vowe\n",
+    "ls. Use non_vowels as the name of the list.\n",
     "Remember to use list comprehensions and to print your results"
    ]
   },
@@ -141,11 +406,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "id": "d5fc7426",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'non_vowels' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[0;32m/var/folders/5x/gn6s3css5x508rs__lb9ck2w0000gn/T/ipykernel_3723/1634000288.py\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      2\u001b[0m \u001b[0mvowels\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m'AEIOUaeiou'\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      3\u001b[0m \u001b[0meliminate_vowels\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m[\u001b[0m\u001b[0mi\u001b[0m \u001b[0;32mfor\u001b[0m \u001b[0mi\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mteststring\u001b[0m \u001b[0;32mif\u001b[0m \u001b[0mi\u001b[0m \u001b[0;32mnot\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mvowels\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 4\u001b[0;31m \u001b[0mnon_vowels\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m''\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mjoin\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mnon_vowels\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      5\u001b[0m \u001b[0mnon_vowels\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      6\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'non_vowels' is not defined"
+     ]
+    }
+   ],
+   "source": [
+    "teststring = 'Find all of the words in a string that are monosyllabic'\n",
+    "vowels = 'AEIOUaeiou'\n",
+    "eliminate_vowels = [i for i in teststring if i not in vowels]\n",
+    "non_vowels = ''.join(non_vowels)\n",
+    "non_vowels\n",
+    "\n"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -160,11 +444,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "id": "3a43399c",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['T', 'Q', 'B', 'F', 'J', 'O', 'T', 'L', 'D']"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "sentence = 'The Quick Brown Fox Jumped Over The Lazy Dog'\n",
+    "capital_letters = [char for char in sentence if char.isupper() and not char.isspace()]\n",
+    "capital_letters"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -179,11 +478,50 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "id": "3ddb68df",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['T',\n",
+       " 'h',\n",
+       " 'q',\n",
+       " 'c',\n",
+       " 'k',\n",
+       " 'b',\n",
+       " 'r',\n",
+       " 'w',\n",
+       " 'n',\n",
+       " 'f',\n",
+       " 'x',\n",
+       " 'j',\n",
+       " 'm',\n",
+       " 'p',\n",
+       " 'd',\n",
+       " 'v',\n",
+       " 'r',\n",
+       " 't',\n",
+       " 'h',\n",
+       " 'l',\n",
+       " 'z',\n",
+       " 'y',\n",
+       " 'd',\n",
+       " 'g']"
+      ]
+     },
+     "execution_count": 19,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "sentence1 = 'The quick brown fox jumped over the lazy dog'\n",
+    "vowels = 'AEIOUaeiou'\n",
+    "consonants = [i for i in sentence1 if i.isalpha() and i not in vowels]\n",
+    "consonants\n"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -201,11 +539,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 35,
    "id": "22bb13eb",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'/path/to/lectures/local/repo'"
+      ]
+     },
+     "execution_count": 35,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import os\n",
+    "directory = '//to/lectures/local/repo'\n",
+    "directory "
+   ]
   },
   {
    "cell_type": "markdown",
@@ -220,11 +573,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "id": "120b29bd",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "ename": "SyntaxError",
+     "evalue": "invalid syntax (1235058802.py, line 3)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;36m  File \u001b[0;32m\"/var/folders/5x/gn6s3css5x508rs__lb9ck2w0000gn/T/ipykernel_3723/1235058802.py\"\u001b[0;36m, line \u001b[0;32m3\u001b[0m\n\u001b[0;31m    random_lists\u001b[0m\n\u001b[0m    ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
+     ]
+    }
+   ],
+   "source": [
+    "import random\n",
+    "random_lists = [random.randint(0,100)for i in range (10) \n",
+    "random_lists"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -295,10 +661,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 36,
    "id": "b5980ab4",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "SyntaxError",
+     "evalue": "Missing parentheses in call to 'print'. Did you mean print(i**2)? (3439384179.py, line 2)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;36m  File \u001b[0;32m\"/var/folders/5x/gn6s3css5x508rs__lb9ck2w0000gn/T/ipykernel_2541/3439384179.py\"\u001b[0;36m, line \u001b[0;32m2\u001b[0m\n\u001b[0;31m    print i**2\u001b[0m\n\u001b[0m          ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m Missing parentheses in call to 'print'. Did you mean print(i**2)?\n"
+     ]
+    }
+   ],
    "source": [
     "for i in ['a','b','c']:\n",
     "    print i**2"
@@ -636,7 +1011,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.13"
+   "version": "3.9.13"
   },
   "toc": {
    "base_numbering": 1,
