lab-errhand-listcomp completo

--- a/your-code/main.ipynb
+++ b/your-code/main.ipynb
@@ -575,7 +575,30 @@
     "for i in ['a','b','c']:\n",
     "    print i**2\n",
     "    \n",
-    "# No se puede prevenir SyntaxError con try/except"
+    "# no se puede prevenir SyntaxError con try/except"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "277bfe47",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Error de tipo. La operación que intenta realizar no puede darse entre estos tipos de variable.\n"
+     ]
+    }
+   ],
+   "source": [
+    "# si el código no fuese SyntaxError:\n",
+    "try:\n",
+    "    for i in ['a','b','c']:\n",
+    "        print(i**2)\n",
+    "except TypeError:\n",
+    "    print(\"Error de tipo. La operación que intenta realizar no puede darse entre estos tipos de variable.\")"
    ]
   },
   {
@@ -966,7 +989,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 99,
+   "execution_count": 5,
    "id": "94c2e76e",
    "metadata": {},
    "outputs": [
@@ -978,7 +1001,8 @@
       "Error. Debe ingresar un número entero.\n",
       "Ingrese un número entero: h\n",
       "Error. Debe ingresar un número entero.\n",
-      "Ingrese un número entero: 5\n"
+      "Ingrese un número entero: 5\n",
+      "El cuadrado de tu número es:  25\n"
      ]
     }
    ],
@@ -986,6 +1010,7 @@
     "while True:\n",
     "    try:\n",
     "        user_input= int(input(\"Ingrese un número entero: \"))\n",
+    "        print(\"El cuadrado de tu número es: \",user_input**2)\n",
     "        break\n",
     "    except ValueError:\n",
     "        print(\"Error. Debe ingresar un número entero.\")"
@@ -1004,7 +1029,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 102,
+   "execution_count": 8,
    "id": "90d3aa37",
    "metadata": {},
    "outputs": [
@@ -1019,11 +1044,7 @@
    ],
    "source": [
     "digits= [i for i in range(2,10)]\n",
-    "results= []\n",
-    "for i in range(1,1001):\n",
-    "    for o in digits:\n",
-    "        if i%o == 0:\n",
-    "            results.append(i)\n",
+    "results= [i for i in range(1,1001) for o in digits if i%o == 0]\n",
     "results= set(results)\n",
     "print(len(results),'resultados\\n',results)"
    ]
